# azure-iot-samples-c

./: CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  technical-question-.md
device-client/: CMakeLists.txt  README.md
device-client/multithreaded/: CMakeLists.txt  README.md
device-client/multithreaded/amqp-shared-methods/: README.md
device-client/multithreaded/amqp-shared-methods/aptget/: CMakeLists.txt  README.md
device-client/multithreaded/device-twin-and-methods/: CMakeLists.txt  README.md  iothub_device_twin_and_methods_sample.c
device-client/multithreaded/device-twin-and-methods/aptget/: CMakeLists.txt  README.md
device-client/multithreaded/iot-edge-downstream-device-sample/: README.md
device-client/multithreaded/iot-edge-downstream-device-sample/aptget/: CMakeLists.txt  README.md
device-client/multithreaded/iot-edge-downstream-device-sample/linux/: README.md
device-client/multithreaded/module-filter/: README.md
device-client/multithreaded/module-filter/aptget/: README.md
device-client/multithreaded/module-filter/linux/: CMakeLists.txt
device-client/multithreaded/module-method-invoke/: README.md
device-client/multithreaded/module-method-invoke/aptget/: README.md
device-client/multithreaded/module-method-invoke/linux/: CMakeLists.txt  README.md
device-client/multithreaded/module-sender/: README.md
device-client/multithreaded/module-sender/aptget/: CMakeLists.txt  README.md
device-client/multithreaded/mqtt-dm/: README.md
device-client/multithreaded/mqtt-dm/Template/: README.md
device-client/multithreaded/mqtt-dm/aptget/: CMakeLists.txt  README.md
device-client/multithreaded/mqtt-dm/linux/: README.md
device-client/multithreaded/mqtt-dm/pi_device/: README.md
device-client/multithreaded/mqtt-dm/pi_device/packaging/: README.md
device-client/multithreaded/mqtt-dm/pi_device/packaging/debian/: README.md
device-client/multithreaded/mqtt-dm/pi_device/packaging/debian/source/: README.md
device-client/multithreaded/telemetry/: README.md  iothub_telemetry_sample.c
device-client/multithreaded/telemetry/aptget/: README.md
device-client/multithreaded/telemetry/linux/: CMakeLists.txt
device-client/multithreaded/upload-to-blob-mb/: CMakeLists.txt
device-client/singlethreaded/: CMakeLists.txt  README.md
device-client/singlethreaded/amqp-multiplexing/aptget/: README.md
device-client/singlethreaded/amqp-multiplexing/linux/: CMakeLists.txt
device-client/singlethreaded/service-client-to-device/aptget/: CMakeLists.txt
device-client/singlethreaded/service-client-to-device/linux/: README.md
device-client/singlethreaded/telemetry/: CMakeLists.txt  README.md
device-client/singlethreaded/telemetry/linux/: CMakeLists.txt  README.md
device-client/singlethreaded/upload-to-blob/: iothub_client_sample_upload_to_blob.c
device-client/singlethreaded/upload-to-blob-multiple-blocks/: iothub_client_sample_upload_to_blob_mb.c
device-client/singlethreaded/upload-to-blob-multiple-blocks/aptget/: CMakeLists.txt  README.md
device-client/singlethreaded/upload-to-blob-multiple-blocks/mbed/: README.md
device-client/singlethreaded/upload-to-blob/linux/: CMakeLists.txt  README.md
device-client/singlethreaded/x509-authentication/linux/: CMakeLists.txt  README.md
iot-hub-device-client/multithreaded/telemetry/linux/: README.md
iot-hub-device-client/singlethreaded/telemetry/: iothub_ll_telemetry_sample.c
iot-hub-device-client/singlethreaded/telemetry/linux/: CMakeLists.txt
tools/: c_sdk_aptget.sh  generate_readmes.sh
